# erp-backend

./: Dockerfile  README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
alembic/: env.py
alembic/versions/: c9fad880fde4_initial.py
app/: database.py  main.py  models.py  security.py
app/endpoints/dependencies/: auth.py  common.py  constants.py  database.py  password.py
app/endpoints/routers/: clientes.py  cuentas.py  empresas.py  organizaciones.py  servicios.py  tags.py  token.py  usuarios.py
app/schemas/: cliente_empresa.py  common.py  cuenta.py  empleado.py  errors.py  organizacion.py  pagination.py  security.py  servicio.py  tarea.py  user.py
sql/: create_orgnanizacion.sql
tests/: conftest.py  test_clientes.py  test_dependencies.py
